Fix win condition logic and add turn sound notification
- Fix win condition: Check if current player's king is trapped after turn switch (previously checked both players)
- Add pleasant ding sound effect that plays when turns switch
- Add sound toggle control in settings bar to enable/disable turn sounds

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <div id="game-screen" class="game-screen" style="display: none;">
             <div id="player-number" class="player-number"></div>
 
+            <div class="settings-bar">
+                <label class="sound-toggle">
+                    <input type="checkbox" id="sound-toggle" checked>
+                    <span>🔔 Sound</span>
+                </label>
+            </div>
+
             <div class="game-info">
                 <div class="player-info player1">
                     <div class="player-label">Red Player</div>
